# ClerqAPITakeHome

./: .env.example  .flaskenv  README.md  pyproject.toml
src/acme/: __init__.py  client.py
src/acme/static/: style.css
src/acme/templates/: index.html
